--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 <body>
     <nav class="navbar navbar-light navbar-expand-md wt-shadow2">
-        <div class="container-fluid"><img src="assets/img/wt-logo.svg" height="32px"><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container-fluid"><img src="assets/img/wt-logo.png" height="32px"><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link wt-link" href="#how">Como funciona?</a></li>
@@ -166,7 +166,7 @@
     <footer>
         <div class="container-fluid py-3">
             <div class="row">
-                <div class="col-lg-5 text-center text-sm-center text-md-center text-lg-start text-xl-start text-xxl-start"><img src="assets/img/wt-inverselogo.svg" alt="Web Templates"><small class="d-block mb-2">O melhor site de templates para startups e empreendedores</small><!-- Start: Mailchimp Component -->
+                <div class="col-lg-5 text-center text-sm-center text-md-center text-lg-start text-xl-start text-xxl-start"><img src="assets/img/wt-inverse-logo.png" alt="Web Templates"><small class="d-block mb-2">O melhor site de templates para startups e empreendedores</small><!-- Start: Mailchimp Component -->
                     <form class="align-items-start validate mailchimp" method="post" target="_blank" novalidate="" action="https://qcommerx.us20.list-manage.com/subscribe/post?u=a8e37df0c5e1262b5fa443807&amp;amp;id=5b4269ed78" name="mc-embedded-subscribe-form"><button class="btn wt-btn" type="submit" name="subscribe">Quer receber nosso contato?<br></button><!-- Start: real people should not fill this -->
                         <div aria-hidden="true" style="position: absolute; left: -5000px;"><input class="form-control" type="text" name="b_a8e37df0c5e1262b5fa443807_5b4269ed78" tabindex="-1"></div><!-- End: real people should not fill this --><input class="form-control required email" type="email" placeholder="Seu melhor e-mail" spellcheck="false" autocomplete="off" name="EMAIL">
                     </form><!-- End: Mailchimp Component --><span class="d-block mb-2">Os serviços e comunicados da Web Templates são feitas pela&nbsp;<a href="#">QCommerx do Brasil&nbsp;<sup>®</sup></a>&nbsp;CNPJ - 32.117.275/0001-04</span>
