--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Web Templates 2021 | Compre seu Template Web Aqui</title>
+    <meta name="keywords" content="como comprar webtemplates, webtemplates funciona, web templates, comprar templates web, comprar template web brasil, comprar templates web html, comprar templates bootstrap, comprar template startup, template portfolio, template starter.">
     <meta name="robots" content="index, follow">
     <meta name="twitter:card" content="summary_large_image">
     <meta property="og:description" content="Lance seu MVP ou produto web rapidamente">
